# grout

./: .clang-format  .coderabbit.yaml  .codespellrc  .containerignore  .cursorrules  .editorconfig  .gdbinit  .gitignore  .gitmodules  .isort.cfg  .lsan-suppressions  .mailmap  .pylintrc  CONTRIBUTING.md  Containerfile  Containerfile.frr  Containerfile.grout  GNUmakefile  LICENSE  Makefile  README.md  meson.build  meson_options.txt
api/: br_api.h  br_api_client_impl.h  br_bitops.h  br_macro.h  br_net_types.h  br_string.h  gr_api.h  gr_api_client_impl.h  gr_bitops.h  gr_clock.h  gr_errno.h  gr_macro.h  gr_net_compat.h  gr_net_types.h  gr_string.h  meson.build  printf.c  printf_test.c  stb_ds_impl.c  string.c  string_test.c
cli/: br-cli  br_cli.h  br_table.h  cffi_gen.py  cli.h  complete.c  complete.h  display.c  display.h  dump.c  dump.h  ec_node_devargs.c  ec_node_dyn.c  ecoli.c  exec.c  exec.h  gr_cli.h  gr_display.h  gr_table.h  grcli.bash-completion  interact.c  interact.h  log.c  log.h  main.c  man.c  man.h  man_commands.c  man_main.c  meson.build  pager.c  pager.h  quit.c  table.c  tty.c
cli/br/: __main__.py  c.py  cli.py
cli/include/: br_cli.h
core/: api.c  br.h  br_api.h  br_api.proto  br_control.h  bro.h  control-priv.h  control.c  control.h  corelist.c  dpdk.c  dpdk.h  main.c  meson.build  signals.c  signals.h  stb_ds_impl.c  worker.h
core/include/: br_api.h  br_control.h  br_log.h  br_net_types.h  br_queue.h  br_stb_ds.h  bro_alloc.h  bro_api.h  bro_control.h
docs/: br.1.scd  gen-man.py  grcli-address.1.md  grcli-affinity.1.md  grcli-conntrack.1.md  grcli-dnat44.1.md  grcli-events.1.md  grcli-graph.1.md  grcli-interface.1.md  grcli-logging.1.md  grcli-nexthop.1.md  grcli-route.1.md  grcli-snat44.1.md  grcli-stats.1.md  grcli.1.md  grcli.1.scd  grcli.1.scdoc  grout-frr.7.md  grout-frr.7.scdoc  grout.1.scd  grout.8.md  grout.8.scd  grout.8.scdoc  meson.build
docs/quadlets/: README.md  frr.container  grout-bind  grout-bind@.service  grout-metrics.container  grout-netns.service  grout-unbind  grout.container
frr/: dplane.c  dplane.h  frr_plugin_install.sh  if_grout.c  if_grout.h  if_map.c  if_map.h  if_netlink.c  if_netlink.h  iface.c  iface.h  ifmap.c  ifmap.h  l3vni_map.c  l3vni_map.h  log.h  log_grout.h  meson.build  nh.c  nh.h  route.c  route.h  rt_grout.c  rt_grout.h  zebra_dplane_grout.c  zebra_dplane_grout.h
frr_plugin/: frr_plugin_install.sh  if_grout.c  log_grout.h  meson.build  rt_grout.c  rt_grout.h  zebra_dplane_grout.c  zebra_dplane_grout.h
main/: _cmocka.h  api.c  api.h  arr.h  arr_test.c  br.h  br_control.h  br_log.h  br_queue.h  br_stb_ds.h  br_string.h  config.h  control.c  control.h  control_queue.c  control_queue.h  dpdk.c  dpdk.h  event.c  event.h  gr.h  gr_config.h  gr_control.h  gr_control_queue.h  gr_event.h  gr_id_pool.h  gr_log.h  gr_metrics.h  gr_module.h  gr_queue.h  gr_sort.h  gr_stb_ds.h  gr_string.h  gr_vec.h  grout.bash-completion  grout.default  grout.init  grout.service  id_pool.h  id_pool_test.c  (+23 more)
main/include/: br_api.h  br_cmocka.h  br_control.h  br_net_types.h  br_stb_ds.h
modules/infra/api/: affinity.c  br_infra.h  capture.c  capture_ring_test.c  gr_capture.h  gr_infra.h  gr_nexthop.h  graph.c  iface.c  meson.build  nexthop.c  packet_trace.c  port.c  rss_autoscale.c  rxq.c  stats.c  trace.c
modules/infra/cli/: address.c  affinity.c  bond.c  br_cli_iface.h  capture.c  cli_event.h  cli_iface.h  cli_l3.h  cli_nexthop.h  ec_node_devargs.c  events.c  fib_pool.c  gr_cli_event.h  gr_cli_iface.h  gr_cli_l3.h  gr_cli_nexthop.h  graph.c  icmp.c  iface.c  loopback.c  mac.c  meson.build  nexthop.c  notifications.c  pcapng.c  pcapng.h  port.c  port.list  route.c  rss_autoscale.c  rxq.c  stats.c  trace.c  vlan.c  vrf.c  vrf_iface.c
modules/infra/control/: bond.c  bond.h  bond_bridge_test.c  br_graph.h  br_iface.h  br_port.h  br_vlan.h  br_worker.h  capture.c  capture.h  control_output.c  control_queue.c  ctlplane.c  ctlplane.h  fib_pool.c  gr_bond.h  gr_control_queue.h  gr_fib_pool.h  gr_graph.h  gr_iface.h  gr_kernel.h  gr_loopback.h  gr_mempool.h  gr_netlink.h  gr_nh_control.h  gr_port.h  gr_vlan.h  gr_vrf.h  gr_worker.h  graph.c  graph.h  graph_priv.h  group_nexthop.c  iface.c  iface.h  iface_test.c  kernel.c  l3_nexthop.c  lacp.c  loop_output.c  (+37 more)
modules/infra/datapath/: bond_output.c  br_datapath.h  br_eth_input.h  br_eth_output.h  br_mbuf.h  br_tx.h  broadcast.c  classify.c  control_input.c  control_input.h  control_output.c  control_output.h  datapath.h  drop.c  eth.h  eth_input.c  eth_output.c  eth_trace_priv.h  ethertypes_priv.h  gr_control_input.h  gr_control_output.h  gr_datapath.h  gr_eth.h  gr_eth_input.h  gr_eth_output.h  gr_icmp6.h  gr_l3.h  gr_lacp.h  gr_mbuf.h  gr_rcu.h  gr_rx.h  gr_rxtx.h  gr_snap.h  gr_trace.h  gr_tx.h  iface_input.c  iface_output.c  kernel_input.c  kernel_output.c  l1_xconnect.c  (+28 more)
modules/ip/datapath/: arp_input.c  arp_input_reply.c  arp_input_request.c  arp_output_reply.c  arp_output_request.c  br_ip4_datapath.h  dnat44.c  fib4.c  gr_fib4.h  gr_ip4_datapath.h  icmp_input.c  icmp_local_send.c  icmp_output.c  icmp_output_request.c  ip4.h  ip4_datapath.h  ip_error.c  ip_forward.c  ip_forward_error.c  ip_forward_ttl_exceeded.c  ip_fragment.c  ip_hold.c  ip_input.c  ip_loadbalance.c  ip_local.c  ip_output.c  ip_ttl_exceeded.c  lookup.c  mbuf_priv.h  meson.build  rewrite.c  snat44.c
modules/ip6/datapath/: fib6.c  gr_fib6.h  gr_ip6_datapath.h  icmp6_input.c  icmp6_local_send.c  icmp6_output.c  ip6_datapath.h  ip6_error.c  ip6_forward.c  ip6_hold.c  ip6_input.c  ip6_loadbalance.c  ip6_local.c  ip6_output.c  meson.build  ndp_na_input.c  ndp_na_output.c  ndp_ns_input.c  ndp_ns_output.c  (+1 more)
modules/platform/: bro_platform.h  cli.c  cli.list  control.c  meson.build  platform.proto
modules/srv6/: cli.c  control.c  control_headend.c  control_local.c  datapath_headend.c  datapath_local.c  datapath_steer.c  gr_srv6.h  gr_srv6_api.h  meson.build  srv6_priv.h
pcap/: meson.build  pcap-grout.c
tests/: _init.sh  config_test.sh  ip_forward_test.sh  meson.build  vlan_forward_test.sh  vrf_forward_test.sh
(+558 files in other folders)
