# SPDX-License-Identifier: BSD-3-Clause
# Copyright (c) 2024 Vincent Jardin

option(
  'docs', type: 'feature', value: 'auto',
  description: 'Build man pages. If set to "auto", only build if go-md2man is found.',
)

option(
  'frr', type: 'feature', value: 'auto',
  description: 'Build FRR plugin. If set to "auto", only build if FRR headers are found.',
)

option(
  'tests', type: 'feature', value: 'auto',
  description: 'Build unit-tests. If set to "auto", only build if cmocka is found.',
)

option(
  'dpdk_static', type: 'boolean', value: false,
  description: 'If set to true, link against static DPDK libraries.',
)
