# SPDX-License-Identifier: BSD-3-Clause
# Copyright (c) 2024 Vincent Jardin

option(
  'docs', type: 'feature', value: 'auto',
  description: 'Build man pages. If set to "auto", only build if scdoc is found.',
)

option(
  'frr', type: 'feature', value: 'auto',
  description: 'Build FRR plugin. If set to "auto", only build if FRR headers are found.',
)

option(
  'frr_version', type: 'combo', choices: ['default', '10.6.0', 'master'], value: 'default',
  description: 'FRR version, defaults to 10.5.3.',
)

option(
  'tests', type: 'feature', value: 'auto',
  description: 'Build unit-tests. If set to "auto", only build if cmocka is found.',
)
