# SPDX-License-Identifier: BSD-3-Clause
# Copyright (c) 2024 Vincent Jardin

option(
  'dpdk_version', type: 'combo', choices: ['25.11', '25.11-head', 'main'], value: '25.11',
  description: 'DPDK version, defaults to 25.11.',
)

option(
  'docs', type: 'feature', value: 'auto',
  description: 'Build man pages. If set to "auto", only build if scdoc is found.',
)

option(
  'frr', type: 'feature', value: 'auto',
  description: 'Build FRR plugin. If set to "auto", only build if FRR headers are found.',
)

option(
  'frr_version', type: 'combo', choices: ['10.5', '10.6', 'master'], value: '10.5',
  description: 'FRR version, defaults to 10.5.',
)

option(
  'tests', type: 'feature', value: 'auto',
  description: 'Build unit-tests. If set to "auto", only build if cmocka is found.',
)

option(
  'dpdk_cpu', type: 'string', value: 'auto',
  description: 'Value of DPDK cpu_instruction_set when compiled as a subproject.',
)
