# SPDX-License-Identifier: BSD-3-Clause
# Copyright (c) 2023 Robin Jarry

src += files(
  'control.c',
  'dpdk.c',
  'main.c',
  'signals.c',
  'stb_ds_impl.c',
  'string.c',
)

api_headers += files('include/br_api.h')

inc += include_directories('include')
lib_inc += include_directories('include')
