# SPDX-License-Identifier: BSD-3-Clause
# Copyright (c) 2025 Olivier Gournet

inc += include_directories('.')
src += files(
  'control_local.c',
  'control_headend.c',
  'datapath_local.c',
  'datapath_headend.c',
)

api_headers += files('gr_srv6.h')
cli_inc += include_directories('.')
cli_src += files('cli.c')
