# SPDX-License-Identifier: BSD-3-Clause
# Copyright (c) 2023 Robin Jarry

cli_src += files(
  'address.c',
  'affinity.c',
  'bond.c',
  'capture.c',
  'events.c',
  'graph.c',
  'icmp.c',
  'iface.c',
  'nexthop.c',
  'pcapng.c',
  'port.c',
  'route.c',
  'stats.c',
  'trace.c',
  'vlan.c',
  'vrf.c',
)

cli_inc += include_directories('.')
