# SPDX-License-Identifier: BSD-3-Clause
# Copyright (c) 2023 Robin Jarry

src += files(
  'control_input.c',
  'control_output.c',
  'drop.c',
  'eth_input.c',
  'eth_output.c',
  'l1_xconnect.c',
  'kernel_input.c',
  'kernel_output.c',
  'main_loop.c',
  'rx.c',
  'trace.c',
  'tx.c',
  'vrf_output.c'
)
inc += include_directories('.')
