# SPDX-License-Identifier: BSD-3-Clause
# Copyright (c) 2023 Robin Jarry

src += files(
  'control_input.c',
  'control_output.c',
  'drop.c',
  'eth_input.c',
  'eth_output.c',
  'l1_xconnect.c',
  'loop_input.c',
  'loop_output.c',
  'loop_xvrf.c',
  'main_loop.c',
  'port_output.c',
  'port_rx.c',
  'port_tx.c',
  'trace.c',
)
inc += include_directories('.')
