# SPDX-License-Identifier: BSD-3-Clause
# Copyright (c) 2024 Robin Jarry

src += files(
  'icmp6_input.c',
  'icmp6_output.c',
  'ip6_error.c',
  'ip6_forward.c',
  'ip6_input.c',
  'ip6_local.c',
  'ip6_output.c',
  'ndp_na_input.c',
  'ndp_ns_input.c',
  'ndp_ns_output.c',
)
inc += include_directories('.')
